--- a/Laboratorio2 simulacion.ipynb
+++ b/Laboratorio2 simulacion.ipynb
@@ -18,11 +18,12 @@
    "source": [
     "# Introduccion\n",
     "\n",
-    "Las personas involucradas en el desarrollo de la bomba atomica se encontraron con problemas complejos y con sistemas con comportamientos aleatorios.\n",
-    "Debido a esto no era factible intentar llegar a soluciones 100% exactas, sino que era necesario realizar estimaciones.\n",
-    "El metodo de montecarlo fue creado como herramienta de investigacion para resolver este tipo de problemas, \n",
-    "no deterministicos. La utilidad del metodo de montecarlo esta relacionada a la continua mejora de los computadores y\n",
-    "la capacidad de computo de estos.\n"
+    "Las personas involucradas en el desarrollo de la bomba atomica se encontraron con problemas\n",
+    "complejos y con sistemas con comportamientos aleatorios. Debido a esto no era factible intentar\n",
+    "llegar a soluciones 100% exactas, sino que era necesario realizar estimaciones. El metodo de\n",
+    "montecarlo fue creado como herramienta de investigacion para resolver este tipo de problemas,\n",
+    "no deterministicos. La utilidad del metodo de montecarlo esta relacionada a la continua mejora\n",
+    "de los computadores y la capacidad de computo de estos.\n"
    ]
   },
   {
@@ -31,22 +32,16 @@
    "source": [
     "# Numero PI\n",
     "\n",
-    "PI es la relacion entre la longitud y diametro de una circunferencia.\n",
-    "Su numero a sido aproximado a traves de la historia, y es una de las constantes mas utilizadas, junto con el numero e.\n",
-    "\n",
-    "Arquimides lo calculo con la aproximacion\n",
-    "\n",
-    "$3 + \\dfrac{10}{71} < pi < 3 + \\dfrac{1}{7}$\n",
-    "\n",
-    "En el antiguo Egipto se aproximaba el valor de pi, con la idea de que \n",
-    "el area de un circulo es similar a la de un cuadrado que su lado es igual a  $\\dfrac{8}{9}$  del diametro del circulo.\n",
-    "\n",
-    "En Mesopotamia (1900 a. C.) aproximaban pi con  $pi = 3 + \\dfrac{1}{8}$\n",
-    "\n",
-    "En el siglo II Claudio Ptolomeo aproximo pi con $pi = \\dfrac{377}{120}$\n",
+    "PI es la relacion entre la longitud y diametro de una circunferencia. Su numero a sido aproximado\n",
+    "a traves de la historia, y es una de las constantes mas utilizadas, junto con el numero e. Al\n",
+    "encontrarse pi en muchas formulas relacionadas con la trigonometria y geometria, desde la antiguedad\n",
+    "las personas han intentado estimar con la mayor exactitud posible su valor.\n",
     "\n",
     "## Epoca moderna\n",
-    "Actualmente mediante el uso de computadores es posible calcular con mucha mas precision el valor de pi. El descubrimiento de estas cifras se acelero junto con el desarrollo de la computacion. Desde 1949 donde se obtuvieron $2037$ cifras, al 2011 donde se llego a calcular $10.000.000.000.000$ cifras de pi."
+    "Actualmente mediante el uso de computadores es posible calcular con mucha mas precision\n",
+    "el valor de pi. El descubrimiento de estas cifras se acelero junto con el desarrollo de la\n",
+    "computacion. Desde 1949 donde se obtuvieron 2037 cifras, al 2011 donde se llego a calcular\n",
+    "10.000.000.000.000 cifras de pi."
    ]
   },
   {
